oxiplate-derive/tests/broken/for/for-no-expression.stderr
error: Expected an expression that is iterable
 --> tests/broken/for/for-no-expression.rs:6:19
  |
6 | {%- for number in -%}
  |                   ^^^
